[EDIT]Kata 9, Kata 7. Kata 9 completada exitosamente, Kata 7 codigo organizado.